[package]
name = "dependability"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = ["alloc", "runtime", "retry"]
std = ["dependability-runtime/std"]
alloc = ["dependability-alloc"]
runtime = ["dependability-runtime"]
retry = ["dependability-retry"]

[dependencies.dependability-alloc]
path = "../alloc"
optional = true

[dependencies.dependability-runtime]
path = "../runtime"
optional = true

[dependencies.dependability-retry]
path = "../retry"
optional = true
